# nail

./: LICENSE.txt  README.md
back/: Cargo.toml  nail_conf.toml
back/src/: back_end_server.rs  banner.rs  config.rs  log.rs  main.rs
front/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
front/src/: app.html  error.html
front/src/lib/: indexeddb_adapter.js
front/src/lib/api/: index.js
front/src/lib/component/: Error.svelte  Loading.svelte
front/src/lib/component/article/: Article.svelte  Comment.svelte  Draft.svelte  Editor.svelte  EditorAndRenderer.svelte  Renderer.svelte
front/src/lib/func/article/: betweenEditorAndRenderer.js  dropImage.js  editorStateField.js  editorTheme.js  everyLineCanBeFolded.js  getIdAndVersionOfArticleFromURL.js  limitSomething.js  nailKeymap.js  nmlHighlight.js  parse.js  sync_diff_between_editor_and_parser.js  sync_init_between_editor_and_parser.js
front/src/lib/tool/: cleanTypstRawCanvasDom.js  cleanTypstRawSvgText.js  debounce.js  downloadBlobAndNameIt.js  getWasmFromUrl.js  splitTypstSvgByPage.js
front/src/params/: id.js  version.js
front/src/routes/: +error.svelte  +page.svelte  layout.css
front/src/routes/article/: +page.js  +page.svelte
front/src/routes/article/[article_id=id]/: +page.svelte
front/src/routes/article/add/: +page.svelte
front/src/routes/nothing/: +page.svelte
front/src/routes/test/: +page.svelte
front/src/routes/user/: +page.js  +page.svelte
front/src/routes/user/[user_id=id]/: +page.svelte
nginx-1.29.5/conf/: nail.conf  nginx.conf
(+10 files in other folders)
